--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,162 +1,69 @@
-name: Connector Ops CI - Gradle Check
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
-env:
-  S3_BUILD_CACHE_ACCESS_KEY_ID: ${{ secrets.SELF_RUNNER_AWS_ACCESS_KEY_ID }}
-  S3_BUILD_CACHE_SECRET_KEY: ${{ secrets.SELF_RUNNER_AWS_SECRET_ACCESS_KEY }}
+name: Deploy
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - master
   pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
+    branches: [ master ]
+
+env:
+  DOCKER_TAG: |
+    ${{ github.event.pull_request.head.ref }}-${{ github.event.pull_request.head.sha }}
 
 jobs:
-  changes:
+  deploy:
+    if: ${{ github.event_name == 'pull_request' && !github.event.pull_request.draft }}
     runs-on: ubuntu-latest
-    outputs:
-      java: ${{ steps.changes.outputs.java }}
-
     steps:
       - name: Checkout Airbyte
-        if: github.event_name != 'pull_request'
-        uses: actions/checkout@v4
-      - id: changes
-        uses: dorny/paths-filter@v2
-        with:
-          # Note: expressions within a filter are OR'ed
-          filters: |
-            java:
-              - '**/*.java'
-              - '**/*.gradle'
-              - '**/*.kt'
-              - 'airbyte-cdk/java/**/*'
-              - 'airbyte-cdk/bulk/**/*'
+        uses: actions/checkout@v3
 
-  run-check:
-    needs:
-      - changes
-    if: needs.changes.outputs.java == 'true'
-    # As of now, 16 cores seems to be enough.
-    # Any revision upwards should be based on a performance analysis of gradle scans.
-    # See https://github.com/airbytehq/airbyte/pull/36055 for an example of this,
-    # which explains why which we went down from 64 cores to 16.
-    runs-on: connector-test-large
-    name: Gradle Check
-    timeout-minutes: 30
-    steps:
-      - name: Checkout Airbyte
-        uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v1
         with:
-          distribution: "zulu"
-          java-version: "21"
-      - name: Docker login
-        # We login to benefit from increased rate limits for docker pulls
-        # We can't do it on forks as pull_requests events on forks do not have access to GH secrets
-        if: github.event.pull_request.head.repo.fork != true
-        uses: docker/login-action@v3
+          java-version: '14'
+
+      - uses: actions/setup-node@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: Run Gradle Check
-        uses: burrunan/gradle-cache-action@v1
+          node-version: '16.13.0'
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        run: make build
+      - name: Push Web App Docker
+        run: |
+          docker tag airbyte_1/webapp:dev blotout/airbyte_1-webapp:${{ env.DOCKER_TAG }}
+          docker push blotout/airbyte_1-webapp:${{ env.DOCKER_TAG }}
+      - name: Push Server Docker
+        run: |
+          docker tag airbyte_1/server:dev blotout/airbyte_1-server:${{ env.DOCKER_TAG }}
+          docker push blotout/airbyte_1-server:${{ env.DOCKER_TAG }}
+      - name: Push Scheduler Docker
+        run: |
+          docker tag airbyte_1/scheduler:dev blotout/airbyte_1-scheduler:${{ env.DOCKER_TAG }}
+          docker push blotout/airbyte_1-scheduler:${{ env.DOCKER_TAG }}
+      - name: Push DB Docker
+        run: |
+          docker tag airbyte_1/db:dev blotout/airbyte_1-db:${{ env.DOCKER_TAG }}
+          docker push blotout/airbyte_1-db:${{ env.DOCKER_TAG }}
+      - name: Push Worker Docker
+        run: |
+          docker tag airbyte_1/worker:dev blotout/airbyte_1-worker:${{ env.DOCKER_TAG }}
+          docker push blotout/airbyte_1-worker:${{ env.DOCKER_TAG }}
+      - name: Push Temporal Docker
+        run: |
+          docker tag airbyte_1/temporal:dev blotout/airbyte_1-temporal:${{ env.DOCKER_TAG }}
+          docker push blotout/airbyte_1-temporal:${{ env.DOCKER_TAG }}
+
+      - name: Comment
+        uses: Manoj/comment-pr@v1
+        with:
+          message: "Docker tag: `${{ env.DOCKER_TAG }}`"
         env:
-          CI: true
-        with:
-          job-id: gradle-check
-          read-only: ${{ github.ref != 'refs/heads/master' }}
-          gradle-distribution-sha-256-sum-warning: false
-          concurrent: true
-          # TODO: be able to remove the skipSlowTests property
-          arguments: --scan check -DskipSlowTests=true
-
-  set-instatus-incident-on-failure:
-    name: Create Instatus Incident on Failure
-    runs-on: ubuntu-latest
-    needs:
-      - run-check
-    if: ${{ failure() && github.ref == 'refs/heads/master' }}
-    steps:
-      - name: Call Instatus Webhook
-        uses: joelwmale/webhook-action@master
-        with:
-          url: ${{ secrets.INSTATUS_CONNECTOR_CI_WEBHOOK_URL }}
-          body: '{ "trigger": "down", "status": "HASISSUES" }'
-
-  set-instatus-incident-on-success:
-    name: Create Instatus Incident on Success
-    runs-on: ubuntu-latest
-    needs:
-      - run-check
-    if: ${{ success() && github.ref == 'refs/heads/master' }}
-    steps:
-      - name: Call Instatus Webhook
-        uses: joelwmale/webhook-action@master
-        with:
-          url: ${{ secrets.INSTATUS_CONNECTOR_CI_WEBHOOK_URL }}
-          body: '{ "trigger": "up" }'
-
-  notify-failure-slack-channel:
-    name: "Notify Slack Channel on Build Failures"
-    runs-on: ubuntu-latest
-    needs:
-      - run-check
-    if: ${{ failure() && github.ref == 'refs/heads/master' }}
-    steps:
-      - name: Checkout Airbyte
-        uses: actions/checkout@v4
-      - name: Match GitHub User to Slack User
-        id: match-github-to-slack-user
-        uses: ./.github/actions/match-github-to-slack-user
-        env:
-          AIRBYTE_TEAM_BOT_SLACK_TOKEN: ${{ secrets.SLACK_AIRBYTE_TEAM_READ_USERS }}
-          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish to OSS Build Failure Slack Channel
-        uses: abinoda/slack-action@master
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN_AIRBYTE_TEAM }}
-        with:
-          args: >-
-            {\"channel\":\"C03BEADRPNY\", \"blocks\":[
-            {\"type\":\"divider\"},
-            {\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\" Merge to OSS Master failed! :bangbang: \n\n\"}},
-            {\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"_merged by_: *${{ github.actor }}* \n\"}},
-            {\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"<@${{ steps.match-github-to-slack-user.outputs.slack_user_ids }}> \n\"}},
-            {\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\" :octavia-shocked: <https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}|View Action Run> :octavia-shocked: \n\"}},
-            {\"type\":\"divider\"}]}
-
-  notify-failure-slack-channel-fixed-broken-build:
-    name: "Notify Slack Channel on Build Fixes"
-    runs-on: ubuntu-latest
-    needs:
-      - run-check
-    if: ${{ success() && github.event.pull_request.head.repo.fork != true }}
-    steps:
-      - name: Get Previous Workflow Status
-        uses: Mercymeilya/last-workflow-status@v0.3
-        id: last_status
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-      # To avoid clogging up the channel, only publish build success if the previous build was a failure since this means the build was fixed.
-      - name: Publish Build Fixed Message to OSS Build Failure Slack Channel
-        if: ${{ steps.last_status.outputs.last_status == 'failure' }}
-        uses: abinoda/slack-action@master
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN_AIRBYTE_TEAM }}
-        with:
-          args: >-
-            {\"channel\":\"C03BEADRPNY\", \"blocks\":[
-            {\"type\":\"divider\"},
-            {\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\" OSS Master Fixed! :white_check_mark: \n\n\"}},
-            {\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"_merged by_: *${{ github.actor }}* \n\"}},
-            {\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\" :octavia-rocket: <https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}|View Action Run> :octavia-rocket: \n\"}},
-            {\"type\":\"divider\"}]}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
