--- a/.github/workflows/blotout-connector-shopify.yml
+++ b/.github/workflows/blotout-connector-shopify.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  
+        ref: ${{ github.event.pull_request.head.ref }}
 
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
@@ -23,10 +26,6 @@ jobs:
       run: |
             make tools.airbyte-ci.install
             make tools.airbyte-ci.check
-    # - name: Install Docker
-    #   run: |
-    #     sudo apt-get update 
-    #     sudo apt-get install -y docker.io
 
     - name: Build Shopify Source Docker Image
       run: |
