--- a/.github/workflows/blotout-connector-woocommerce-pr.yml
+++ b/.github/workflows/blotout-connector-woocommerce-pr.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  
+        ref: ${{ github.event.pull_request.head.ref }}      
 
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
