--- a/.github/workflows/blotout-connector-shopify.yml
+++ b/.github/workflows/blotout-connector-shopify.yml
@@ -8,6 +8,10 @@ on:
         - 'airbyte-integrations/connectors/source-shopify/**'  # Trigger only on changes within this directory
   workflow_dispatch:  # Manually triggerable from GitHub UI
 
+env:
+  DOCKER_TAG: |
+    ${{ github.event.pull_request.head.ref }}-${{ github.event.pull_request.head.sha }}
+    
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -42,11 +46,11 @@ jobs:
     - name: Tag Docker image
       run: |
         docker images
-        docker tag airbyte/source-shopify:dev blotout/source-shopify:v1-latest
+        docker tag airbyte/source-shopify:dev blotout/source-shopify:${{ env.DOCKER_TAG }}
 
     - name: Push Docker image to Docker Hub
       run: |
-        docker push blotout/source-shopify:v1-latest
+        docker push blotout/source-shopify:${{ env.DOCKER_TAG }}
 
 
   output_image_tag:
@@ -55,5 +59,5 @@ jobs:
     steps:
       - name: Output Airbyte Server Docker Image Tag
         run: |
-          echo "Docker Image Tag: blotout/source-shopify:v1-latest"
+          echo "Docker Image Tag: blotout/source-shopify:${{ env.DOCKER_TAG }}
        
