--- a/.github/workflows/blotout-connector-woocommerce-pr.yml
+++ b/.github/workflows/blotout-connector-woocommerce-pr.yml
@@ -1,4 +1,4 @@
-name: Blotout Woocommerce Build and Push  Source Docker Image
+name: PullRequest:Blotout Woocommerce Build and Push  Source Docker Image
 
 on:
   pull_request:
