--- a/.github/workflows/blotout-connector-shopify.yml
+++ b/.github/workflows/blotout-connector-shopify.yml
@@ -59,5 +59,5 @@ jobs:
     steps:
       - name: Output Airbyte Server Docker Image Tag
         run: |
-          echo "Docker Image Tag: blotout/source-shopify:${{ env.DOCKER_TAG }}
+          echo "Docker Image Tag: blotout/source-shopify:${{ env.DOCKER_TAG }}"
        
