--- a/.github/workflows/release-blotout-connector-woocommerce.yml
+++ b/.github/workflows/release-blotout-connector-woocommerce.yml
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:  # Manually triggerable from GitHub UI
 
 env:
-  DOCKER_IMAGE: ${{ github.ref_name }}
-
+  DOCKER_IMAGE: |
+    blotout/source-woocommerce:${{ github.ref_name }}
   
 jobs:
   build_and_push:
@@ -58,11 +58,11 @@ jobs:
     - name: Tag Docker image
       run: |
         docker images
-        docker tag airbyte/source-woocommerce:dev blotout/source-woocommerce:${{ env.DOCKER_TAG }}
+        docker tag airbyte/source-woocommerce:dev ${{ env.DOCKER_IMAGE }}
 
     - name: Push Docker image to Docker Hub
       run: |
-        docker push blotout/source-woocommerce:${{ env.DOCKER_TAG }}
+        docker push ${{ env.DOCKER_IMAGE }}
 
 
   output_image_tag:
@@ -71,4 +71,4 @@ jobs:
     steps:
       - name: Output Airbyte Server Docker Image Tag
         run: |
-          echo "Docker Image Tag: blotout/source-woocommerce:${{ env.DOCKER_TAG }}"
+          echo "Docker Image Tag: ${{ env.DOCKER_IMAGE }}"
